--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="tree.js"></script>
     <script src="requests.js"></script>
     
 </body>
